fixed button flex: align-items

--- a/ModernaMediaAngular/src/app/home/landingpage/landingpage.component.scss
+++ b/ModernaMediaAngular/src/app/home/landingpage/landingpage.component.scss
@@ -45,6 +45,7 @@ section.moderna-media-home {
         height: 50px;
         display: flex;
         justify-content: space-between;
+        align-items: center;
         flex-direction: row;
         a {
           height: 40px;
