--- a/ModernaMediaAngular/src/app/home/landingpage/landingpage.desktop.component.scss
+++ b/ModernaMediaAngular/src/app/home/landingpage/landingpage.desktop.component.scss
@@ -23,7 +23,8 @@
         .buttons {
         }
         .buttons {
-          justify-content: flex-start;
+          max-width: 375px;
+          justify-content: space-between;
           a:nth-child(2) {
             margin-left: $padding-section-sides;
           }
@@ -77,9 +78,7 @@
         }
         .content,
         .buttons {
-        }
-        .buttons {
-          justify-content: flex-start;
+          justify-content: space-between;
           a:nth-child(2) {
             margin-left: $padding-section-sides;
           }
@@ -124,7 +123,7 @@
         .buttons {
         }
         .buttons {
-          justify-content: flex-start;
+          justify-content: space-between;
           a:nth-child(2) {
             margin-left: $padding-section-sides;
           }
